--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
   "dependencies": {
     "@clerk/nextjs": "^5.7.3",
     "@discordjs/rest": "^2.4.0",
-    "@hookform/resolvers": "^3.9.0",
+    "@hookform/resolvers": "^3.10.0",
     "@neondatabase/serverless": "^0.9.4",
     "@prisma/adapter-neon": "^5.18.0",
     "@prisma/client": "^5.18.0",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.1",
     "@tanstack/react-query": "^5.51.23",
     "@tanstack/react-table": "^8.20.5",
@@ -36,7 +37,7 @@
     "prisma": "^5.18.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.53.0",
+    "react-hook-form": "^7.63.0",
     "react-icons": "^5.5.0",
     "react-syntax-highlighter": "^15.5.0",
     "superjson": "^2.2.1",
@@ -44,7 +45,7 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.0",
     "wrangler": "^3.72.0",
-    "zod": "^3.23.8"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240815.0",
