--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.10.0",
     "@clerk/nextjs": "^5.7.3",
     "@discordjs/rest": "^2.4.0",
     "@hookform/resolvers": "^3.10.0",
     "@neondatabase/serverless": "^0.9.4",
     "@prisma/adapter-neon": "^5.18.0",
     "@prisma/client": "^5.18.0",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-radio-group": "^1.3.8",
@@ -28,6 +31,7 @@
     "@tanstack/react-query": "^5.51.23",
     "@tanstack/react-table": "^8.20.5",
     "@upstash/redis": "^1.34.0",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -35,6 +39,8 @@
     "hono": "^4.5.5",
     "lucide-react": "^0.453.0",
     "next": "^14.2.8",
+    "next-auth": "^5.0.0-beta.29",
+    "nodemailer": "^6.10.1",
     "prisma": "^5.18.0",
     "react": "^18",
     "react-dom": "^18",
@@ -52,6 +58,7 @@
     "@cloudflare/workers-types": "^4.20240815.0",
     "@netlify/plugin-nextjs": "^5.12.1",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.1",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-syntax-highlighter": "^15.5.13",
