--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-hook-form": "^7.63.0",
     "react-icons": "^5.5.0",
     "react-syntax-highlighter": "^15.5.0",
+    "sonner": "^2.0.7",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
