--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "next-auth": "^5.0.0-beta.29",
     "nodemailer": "^6.10.1",
     "prisma": "^5.18.0",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.63.0",
