--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "next": "^14.2.8",
     "next-auth": "^5.0.0-beta.29",
     "nodemailer": "^6.10.1",
+    "ogl": "^1.0.11",
     "prisma": "^5.18.0",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0",
@@ -47,6 +48,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.63.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-syntax-highlighter": "^15.5.0",
     "sonner": "^2.0.7",
     "superjson": "^2.2.1",
