--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "flowbite-react": "^0.12.9",
     "framer-motion": "^11.11.9",
     "hono": "^4.5.5",
     "lucide-react": "^0.453.0",
