--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.63.0",
     "react-icons": "^5.5.0",
+    "react-international-phone": "^4.6.0",
     "react-intersection-observer": "^9.16.0",
     "react-syntax-highlighter": "^15.5.0",
     "sonner": "^2.0.7",
