--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "framer-motion": "^11.11.9",
     "hono": "^4.5.5",
     "lucide-react": "^0.453.0",
+    "motion": "^12.23.24",
     "next": "^14.2.8",
     "next-auth": "^5.0.0-beta.29",
     "nodemailer": "^6.10.1",
