--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "firebase": "^12.4.0",
     "flowbite-react": "^0.12.9",
     "framer-motion": "^11.11.9",
     "hono": "^4.5.5",
